modules html completed

--- a/language/en-GB/en-GB.tpl_astra.ini
+++ b/language/en-GB/en-GB.tpl_astra.ini
@@ -48,3 +48,5 @@ TPL_ASTRA_SPACER_LAYOUT_LABEL="Layout"
 TPL_ASTRA_SPACER_BANNER_LABEL="Banner"
 TPL_ASTRA_SPACER_FOOTER_LABEL="Footer"
 TPL_ASTRA_SPACER_COLUMN_LABEL="Column width"
+TPL_ASTRA_RESPONSIVE_LABEL="Responsive"
+TPL_ASTRA_RESPONSIVE_DESC="Enable Responsive layout"
